Hid the big spill placement buttons and added informational paragraph to the spill map modal, issue #623

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -2880,7 +2880,7 @@ nav.navbar{
 
             .spill-big-button {
                 .spill-button;
-
+                display: none;
                 left: 15em;
                 top: 30em;
                 font-size: 12px;
